--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -214,8 +214,11 @@ img, svg {
 }
 
 .character-avatar {
+    width: 100%;
+    min-height: 100%;
     aspect-ratio: 1/1;
     object-fit: cover;
+    scale: 1.2;
 }
 
 .card-text {
