--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -26,7 +26,7 @@
 
 :root {
     color-scheme: light dark;
-    --navbar-height: 70px;
+    --navbar-height: 60px;
     --block-height: 80px;
 }
 
@@ -49,6 +49,7 @@ body {
 
 .navbar, .subbar {
     box-sizing: border-box;
+    position: sticky;
     height: var(--navbar-height);
     width: 100%;
     z-index: 100;    
@@ -57,7 +58,6 @@ body {
     align-items: center;
     gap: 10px;
     background: var(--block-bg-color);
-    border: var(--block-border);
     padding:5px;
     margin: 0;
 }
@@ -66,7 +66,8 @@ body {
     bottom: 0;
     left: 0;
     justify-content: space-around;
-    box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.1);
+    border-top: var(--block-border);
+    box-shadow: 0 -5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 10px 10px 0px 0px;
 }
 
@@ -74,7 +75,8 @@ body {
     top: 0;
     left: 0;
     justify-content: space-between;
-    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.1);
+    border-bottom: var(--block-border);
+    box-shadow: 0 5px 5px rgba(0, 0, 0, 0.5);
     border-radius: 0px 0px 10px 10px;
 }
 
