--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -32,6 +32,10 @@
     --block-height: 80px;
 }
 
+html {
+    height: -webkit-fill-available;
+}
+
 body {
 	font-family: 'Roboto', sans-serif;
     font-size: 14px;
