--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -71,6 +71,7 @@ body {
     border-top: var(--block-border);
     box-shadow: 0 -5px 5px var(--block-shadow-color);
     border-radius: 10px 10px 0px 0px;
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 .subbar {
@@ -80,6 +81,7 @@ body {
     border-bottom: var(--block-border);
     box-shadow: 0 5px 5px var(--block-shadow-color);
     border-radius: 0px 0px 10px 10px;
+    padding-top: env(safe-area-inset-top);
 }
 
 .subbar div h1 {
@@ -95,6 +97,8 @@ main {
     overflow-y: scroll;
     height: -webkit-fill-available;
     padding: 10px;
+    padding-left: max(10px, env(safe-area-inset-left));
+    padding-right: max(10px, env(safe-area-inset-right));
     display: flex;
     flex-direction: column;
     align-items: center;
