--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -16,10 +16,10 @@
 @media (prefers-color-scheme: dark) {
     :root {
         --page-bg-color: #0b0b0b;
-        --block-bg-color: #191919;
+        --block-bg-color: #1b1c1e;
         --input-bg-color: #0b0b0b;
-        --major-text-color: #f7f7f7;
-        --minor-text-color: #8c8c96;
+        --major-text-color: #fffbff;
+        --minor-text-color: #848684;
         --block-shadow: 3px 4px 5px rgba(0, 0, 0, 0.5);
         --block-border: 1px solid var(--page-bg-color);
         --block-shadow-color: rgba(0, 0, 0, 0.5);
@@ -51,7 +51,7 @@ body {
 
 .navbar, .subbar {
     box-sizing: border-box;
-    position: sticky;
+    position: absolute;
     height: var(--navbar-height);
     width: 100%;
     z-index: 100;    
@@ -96,12 +96,20 @@ main {
     overflow-x: hidden;
     overflow-y: scroll;
     height: -webkit-fill-available;
+    max-width: 1030px;
+    width: 100%;
     padding: 10px;
     padding-left: max(10px, env(safe-area-inset-left));
     padding-right: max(10px, env(safe-area-inset-right));
+    padding-bottom: max(calc(var(--navbar-height) * 2 + 10px), calc(var(--navbar-height) * 2 + env(safe-area-inset-bottom) + 10px));
+    padding-top: max(calc(var(--navbar-height) + 10px), calc(env(safe-area-inset-top) + var(--navbar-height) + 10px));
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-items: flex-start;
+    align-content: flex-start;
+    align-self: center;
+    justify-content: center;
     gap: 10px;
 }
 
@@ -131,7 +139,7 @@ select, .block-text, .block-label, .block-number, .block-calc {
     box-sizing: border-box;
     min-height: 1.2em;
     padding: 5px;
-    background-color: var(--page-bg-color);
+    background-color: var(--input-bg-color);;
     box-shadow: inset var(--block-shadow);
     border: var(--block-border);
     border-radius: 5px;
@@ -198,12 +206,33 @@ img, svg {
     color: var(--major-text-color);
 }
 
+.roll-button {
+    box-sizing: border-box;
+    position: absolute; 
+    bottom: calc(var(--navbar-height) + 10px);
+    right: 10px; 
+    z-index: 100;
+    width: calc(var(--navbar-height) - 10px);
+    height: calc(var(--navbar-height) - 10px);
+    border-radius: 90px;
+    padding: 10px;
+    cursor: pointer;
+    background-color: var(--block-bg-color);
+    box-shadow: var(--block-shadow);
+    border: var(--block-border);
+}
+
+.roll-button:hover {
+    box-shadow: inset var(--block-shadow);
+}
+
 .card-block {
     position: relative;
     top: 0px;
     left: 0px;
     box-sizing: border-box;
     width: 100%;
+    max-width: 500px;
     height: var(--block-height);
     display: flex;
     flex-direction: row;
@@ -256,13 +285,20 @@ img, svg {
     text-align: start;
 }
 
-.custom-textarea {
-    width: 100%;
+.block-text {
     height: 100%;
-    overflow: scroll;
+    box-sizing: border-box;
     overflow-x: hidden;
     box-sizing: border-box;
-    resize:none;
+    white-space: pre;
+}
+
+.custom-textarea {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+    box-sizing: border-box;
 }
 
 input, .custom-textarea {
@@ -298,16 +334,18 @@ input[type="button"]:hover, input[type="submit"]:hover {
 }
 
 dialog {
+    box-sizing: border-box;
     color: var(--minor-text-color);
     border: var(--block-border);
     background: var(--block-bg-color);
     padding: 10px;
-    margin: auto 10px;
+    margin: auto;
     font-family: 'Roboto', sans-serif;
     font-size: 14px;
     border-radius: 10px;
     box-shadow: var(--block-shadow);
-    width: 100%;
+    max-width: 1000px;
+    width: calc(100vw - 20px);
 }
 
 dialog::backdrop {
