--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -33,7 +33,7 @@
 }
 
 html {
-    height: -webkit-fill-available;
+    /*height: -webkit-fill-available;*/
 }
 
 body {
@@ -41,7 +41,7 @@ body {
     font-size: 14px;
     color: var(--major-text-color);
 	background: var(--page-bg-color);
-    height: -webkit-fill-available;
+    /*height: -webkit-fill-available;*/
 	display: flex;
     flex-direction: column;
     margin: 0;
@@ -51,7 +51,7 @@ body {
 
 .navbar, .subbar {
     box-sizing: border-box;
-    position: absolute;
+    position: fixed;
     height: var(--navbar-height);
     width: 100%;
     z-index: 100;    
@@ -93,9 +93,9 @@ body {
 
 main {
     box-sizing: border-box;
-    overflow-x: hidden;
+    /*overflow-x: hidden;
     overflow-y: scroll;
-    height: -webkit-fill-available;
+    height: -webkit-fill-available;*/
     max-width: 1030px;
     width: 100%;
     padding: 10px;
@@ -208,7 +208,7 @@ img, svg {
 
 .roll-button {
     box-sizing: border-box;
-    position: absolute; 
+    position: fixed; 
     bottom: calc(var(--navbar-height) + 10px);
     right: 10px; 
     z-index: 100;
