--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -51,7 +51,7 @@ body {
 
 .navbar, .subbar {
     box-sizing: border-box;
-    position: fixed;
+    position: sticky;
     height: var(--navbar-height);
     width: 100%;
     z-index: 100;    
