--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -58,48 +58,77 @@ body {
 
 ::-webkit-scrollbar { width: 0; }
 
-.navbar, .subbar {
+.nav-wrapper, .menu-wrapper {
     box-sizing: border-box;
     position: fixed;
     height: var(--navbar-height);
     width: 100%;
-    z-index: 100;    
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    gap: 10px;
+    z-index: 100;
     background: var(--block-bg-color);
-    padding: 5px;
     margin: 0;
+    padding: 0;
     padding-left: max(5px, env(safe-area-inset-left));
     padding-right: max(5px, env(safe-area-inset-right));
 }
 
-.navbar {    
+.nav-wrapper {    
     bottom: 0;
     left: 0;
-    justify-content: space-around;
     border-top: var(--block-border);
     box-shadow: 0 -5px 5px var(--block-shadow-color);
     border-radius: 10px 10px 0px 0px;
     margin-bottom: max(0, env(safe-area-inset-bottom));
 }
 
-.subbar {
+.menu-wrapper {
     top: 0;
     left: 0;
-    justify-content: space-between;
     border-bottom: var(--block-border);
     box-shadow: 0 5px 5px var(--block-shadow-color);
     border-radius: 0px 0px 10px 10px;
     margin-top: max(0, env(safe-area-inset-top));
 }
 
-.subbar div h1 {
+nav, menu {
+    box-sizing: border-box;
+    height: 100%;
+    width: clamp(200px, 100%, 1200px);
+    display: flex;
+    margin: 0 auto;
+    flex-direction: row;
+    align-items: center;
+    align-self: center;
+    justify-content: center;
+    padding: 0;
+    gap: 10px;
+}
+
+nav {
+    justify-content: space-around;
+}
+
+menu {
+    justify-content: space-between;
+}
+
+menu div h1 {
     width: 100%;
     text-overflow: ellipsis; 
     white-space: nowrap; 
     overflow: hidden;
+}
+
+nav div, menu div {
+    box-sizing: border-box;
+    height: 100%;
+    width: auto;
+}
+
+.main-wrapper {
+    box-sizing: border-box;
+    height: 100%;
+    width: 100%;
+    background: var(--page-bg-color);
 }
 
 main {
@@ -107,7 +136,7 @@ main {
     overflow-x: hidden;
     overflow-y: scroll;
     height: 100%;
-    width: 100%;
+    width: clamp(200px, 100%, 1200px);
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -116,8 +145,7 @@ main {
     align-self: center;
     justify-content: center;
     gap: 10px;
-    background: var(--page-bg-color);
-
+    margin: auto;
     padding-top: max(calc(10px + var(--navbar-height)), calc(10px + var(--navbar-height) + env(safe-area-inset-top)));
     padding-bottom: max(calc(var(--navbar-height) * 2 + 10px), calc(var(--navbar-height) * 2 + env(safe-area-inset-bottom) + 10px));
     padding-left: max(10px, env(safe-area-inset-left));
@@ -173,14 +201,8 @@ select, .block-text, .block-label, .block-number, .block-calc {
     overflow: hidden;
 }
 
-img, svg {
+img {
     max-height: 100%;
-    width: auto;
-}
-
-.navbar div, .subbar div {
-    box-sizing: border-box;
-    height: 100%;
     width: auto;
 }
 
@@ -204,6 +226,9 @@ img, svg {
 }
 
 .bar-button {
+    display: flex;    
+    justify-content: center;
+    align-items: center;
     border-radius: 90px;
     padding: 10px;
     cursor: pointer;
@@ -217,14 +242,22 @@ img, svg {
     color: var(--major-text-color);
 }
 
+.bar-button svg {
+    height: 25px;
+    width: 25px;
+}
+
 .roll-button {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     box-sizing: border-box;
     position: fixed; 
     bottom: calc(var(--navbar-height) + 10px);
     right: 10px; 
     z-index: 100;
-    width: calc(var(--navbar-height) - 10px);
-    height: calc(var(--navbar-height) - 10px);
+    width: var(--navbar-height);
+    height: var(--navbar-height);
     border-radius: 90px;
     padding: 10px;
     cursor: pointer;
@@ -237,13 +270,17 @@ img, svg {
     box-shadow: inset var(--block-shadow);
 }
 
+.roll-button svg {
+    width: 25px;
+    height: 25px;
+}
+
 .card-block {
     position: relative;
     top: 0px;
     left: 0px;
     box-sizing: border-box;
-    width: 100%;
-    max-width: 500px;
+    width: clamp(200px, 100%, 585px);
     height: var(--block-height);
     display: flex;
     flex-direction: row;
