--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -4,10 +4,10 @@
     color-scheme: light dark;
     --navbar-height: max(50px, calc(50px + env(safe-area-inset-bottom)));
     --block-height: 80px;
-    --blue-color: rgb(73, 139, 255);
-    --green-color: rgb(51, 179, 67);
-    --yellow-color: rgb(255, 221, 87);
-    --red-color: rgb(221, 0, 0);
+    --blue-color: #556EE6;
+    --green-color: #3EC1D3;
+    --yellow-color: #F5CD7A;
+    --red-color: #E66868;
 }
 
 @media (prefers-color-scheme: light) {
@@ -101,19 +101,18 @@ nav, menu {
     display: flex;
     margin: 0 auto;
     flex-direction: row;
-    align-items: center;
-    align-self: center;
-    justify-content: center;
     padding: 0;
     gap: 10px;
 }
 
 nav {
     justify-content: space-around;
+    align-items: flex-start;
 }
 
 menu {
     justify-content: space-between;
+    align-items: flex-end;
 }
 
 menu div h1 {
@@ -173,25 +172,36 @@ main {
     text-align: center;
 }
 
-select, .block-text, .block-label, .block-number, .block-calc {
+select, .block-text, .block-label, .block-number, .block-calc, .custom-textarea {
     box-sizing: border-box;
     min-height: 1.2em;
     padding: 5px;
     background-color: var(--input-bg-color);
-    /*
-    box-shadow: inset var(--block-shadow);
-    */
     border: var(--block-border);
     border-radius: 10px;
     overflow: hidden;
 }
 
-.block-text:focus, .block-number:focus, .block-calc:focus {    
-    border-bottom: 2px solid var(--minor-text-color);
-}
-
 .block-label, .block-number, .block-calc {
     text-align: center;
+}
+
+.block-text {
+    height: 100%;
+    box-sizing: border-box;
+    overflow-x: hidden;
+    white-space: pre;
+}
+
+.custom-textarea {
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
+    overflow-x: hidden;
+}
+
+.block-text:focus, .block-number:focus, .block-calc:focus, .custom-textarea:focus {    
+    border-bottom: 2px solid var(--minor-text-color);
 }
 
 .image-container {
@@ -339,23 +349,7 @@ img {
     text-align: start;
 }
 
-.block-text {
-    height: 100%;
-    box-sizing: border-box;
-    overflow-x: hidden;
-    box-sizing: border-box;
-    white-space: pre;
-}
-
-.custom-textarea {
-    box-sizing: border-box;
-    width: 100%;
-    height: 100%;
-    overflow-x: hidden;
-    box-sizing: border-box;
-}
-
-input, .custom-textarea {
+input {
     border: var(--block-border);
     background: var(--block-bg-color);
     padding: 5px;
@@ -363,20 +357,17 @@ input, .custom-textarea {
     font-size: 14px;
 }
 
-input:focus, .custom-textarea:focus, select:focus {
+input[type="text"]:focus {
     border-bottom: 2px solid var(--minor-text-color);
 }
 
 input[type="text"], .custom-textarea {
     vertical-align: middle;
     background-color: var(--input-bg-color);
-    /*
-    box-shadow: inset var(--block-shadow);
-    */
     border-radius: 10px;
 }
 
-input[type="button"], input[type="submit"] {
+input[type="button"], input[type="submit"], .button {
     color: var(--minor-text-color);
     text-align: center;
     vertical-align: middle;
@@ -385,7 +376,7 @@ input[type="button"], input[type="submit"] {
     cursor: pointer;
 }
 
-input[type="button"]:hover, input[type="submit"]:hover {
+input[type="button"]:hover, input[type="submit"]:hover, .button:hover {
     box-shadow: inset var(--block-shadow);
     border: 1px solid var(--page-bg-color);
 }
