--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -371,7 +371,7 @@ input[type="text"], .custom-textarea {
     border-radius: 10px;
 }
 
-input[type="button"], input[type="submit"], .button {
+input[type="button"], input[type="submit"] {
     color: var(--minor-text-color);
     text-align: center;
     vertical-align: middle;
@@ -380,7 +380,7 @@ input[type="button"], input[type="submit"], .button {
     cursor: pointer;
 }
 
-input[type="button"]:hover, input[type="submit"]:hover, .button:hover {
+input[type="button"]:hover, input[type="submit"]:hover {
     box-shadow: inset var(--block-shadow);
     border: 1px solid var(--page-bg-color);
 }
