--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -85,7 +85,7 @@ body {
     border-top: var(--block-border);
     box-shadow: 0px -2px 3px 1px var(--block-shadow-color);
     border-radius: 10px 10px 0px 0px;
-    margin-bottom: env(safe-area-inset-bottom);
+    padding-bottom: env(safe-area-inset-bottom);
 }
 
 .menu-wrapper {
@@ -94,7 +94,7 @@ body {
     border-bottom: var(--block-border);
     box-shadow: 0px 2px 3px 1px var(--block-shadow-color);
     border-radius: 0px 0px 10px 10px;
-    margin-top: env(safe-area-inset-top);
+    padding-top: env(safe-area-inset-top);
 }
 
 nav, menu {
