--- a/styles/main-style.css
+++ b/styles/main-style.css
@@ -85,7 +85,7 @@ body {
     border-top: var(--block-border);
     box-shadow: 0px -2px 3px 1px var(--block-shadow-color);
     border-radius: 10px 10px 0px 0px;
-    padding-bottom: env(safe-area-inset-bottom);
+    /*padding-bottom: env(safe-area-inset-bottom);*/
 }
 
 .menu-wrapper {
